# -International-Movie-Recommender-System

./: README.md
Vupro/InternationalMovies/InternationalMovies/: README.md  app.py  bollywood_movies.pkl  data_processor.py  movies_database.pkl  pyproject.toml  recommendation_engine.py  replit.nix  requirements_github.txt  utils.py
Vupro/InternationalMovies/InternationalMovies/attached_assets/: Pasted-I-want-to-build-an-intelligent-Bollywood-movie-recommendation-system-using-Python-that-incorporates--1742815174120.txt  content-1742815555309.md
